crawler ionicon name

--- a/dataset-2-generator/assests/test_pix2code.html
+++ b/dataset-2-generator/assests/test_pix2code.html
@@ -14,19 +14,19 @@
     <div class="container">
       <div class="row">
         <div class="col leaf-col">
-          <h2>dasdsd</h2>
+          <h4>dasdsd</h4>
           <p>dasddt 3216546f afefeatgv</p>
           <a class="btn btn-danger">button</a>
         </div>
         <div class="col leaf-col">
-            <h2>dasdsd</h2>
+            <h4>dasdsd</h4>
             <p>dasddt 3216546f afefeatgv</p>
             <a class="btn btn-danger">button</a>
           </div>
         <div class="col">
           <div class="row">
             <div class="col leaf-col">
-                <h2>dasdsd</h2>
+                <h4>dasdsd</h4>
                 <p>dasddt 3216546f afefeatgv</p>
                 <a class="btn bg-dark">
                   <span class="ion-ios-help text-light"></span>
@@ -36,7 +36,7 @@
           </div>
           <div class="row">
             <div class="col leaf-col">
-              <h2>dasdsd</h2>
+              <h4>dasdsd</h4>
               <p>dasddt 3216546f afefeatgv</p>
               <a class="btn btn-danger">button</a>
             </div>
@@ -46,22 +46,42 @@
       </div>
       <div class="row">
           <div class="col leaf-col">
-            <h2>dasdsd</h2>
+            <h4>dasdsd</h4>
             <p>dasddt 3216546f afefeatgv</p>
             <a class="btn btn-danger">button</a>
           </div>
           <div class="col leaf-col">
-              <h2>dasdsd</h2>
+              <h4>dasdsd</h4>
               <p>dasddt 3216546f afefeatgv</p>
               <a class="btn btn-danger">button</a>
           </div>
           <div class="col leaf-col">
-              <h2>dasdsd</h2>
+              <h4>dasdsd</h4>
               <p>dasddt 3216546f afefeatgv</p>
               <a class="btn btn-danger">button</a>
           </div>
           <div class="col leaf-col">
-              <h2>dasdsd</h2>
+              <h4>dasdsd</h4>
+              <p>dasddt 3216546f afefeatgv</p>
+              <a class="btn btn-danger">button</a>
+          </div>
+          <div class="col leaf-col">
+              <h4>dasdsd</h4>
+              <p>dasddt 3216546f afefeatgv</p>
+              <a class="btn btn-danger">button</a>
+          </div>
+          <div class="col leaf-col">
+              <h4>dasdsd</h4>
+              <p>dasddt 3216546f afefeatgv</p>
+              <a class="btn btn-danger">button</a>
+          </div>
+          <div class="col leaf-col">
+              <h4>dasdsd</h4>
+              <p>dasddt 3216546f afefeatgv</p>
+              <a class="btn btn-danger">button</a>
+          </div>
+          <div class="col leaf-col">
+              <h4>dasdsd</h4>
               <p>dasddt 3216546f afefeatgv</p>
               <a class="btn btn-danger">button</a>
           </div>
