--- a/dataset/dataset2/origin_html/1.html
+++ b/dataset/dataset2/origin_html/1.html
@@ -9,8 +9,8 @@
   <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <title> 1 </title>
   <style>
-    .col-2, .col-4, .col-6 {
-      /* margin-right: 20px; */
+    .col-2, .col-4, .col-6, .col-auto, .col {
+      margin-right: 20px;
       margin-bottom: 20px;
       border-radius: 6px;
     }
@@ -37,19 +37,19 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-4 leaf-col">
+      <div class="col leaf-col">
         <h4 class=" text-info">Cij Jssacbyoqlbvfnpy</h4>
         <p class=" text-white">Fcbxiaunjgjtqh Hahmf</p>
         <a class="btn bg-white"><span class=" text-dark">Nr Rl</span></a>
       </div>
-      <div class="col-4 ">
+      <div class="col-auto">
         <div class="row">
-          <div class="col-6 leaf-col">
+          <div class="col leaf-col">
             <h4 class=" text-light">Ru Uuztklucaodyvbpua</h4>
             <p class=" text-dander">Jfeaovdeycrc Czzwkki</p>
             <a class="btn bg-primary"><span class=" text-secondary">Xg Gs</span></a>
           </div>
-          <div class="col-6 leaf-col">
+          <div class="col leaf-col">
             <h4 class=" text-success">Fwokpbjciuofbdhn Njk</h4>
             <p class=" text-dark">Tomufeyvczwb Bysdbft</p>
             <a class="btn bg-dark"><span class=" text-secondary">Hp Pf</span></a>
@@ -58,7 +58,7 @@
         </div>
 
       </div>
-      <div class="col-4 leaf-col">
+      <div class="col leaf-col">
         <h4 class=" text-info">Qyxpzvybhv Vkngecdjj</h4>
         <p class=" text-dark">Ctuqedvcuzn Nfbawnfw</p>
         <a class="btn bg-success"><span class=" text-dander">Nd Dz</span></a>
